# SHM-nodo-acelerometro

./: .gitignore  CMakeLists.txt  Comandos MQTT  LICENSE  Makefile  README.md  cancelar_muestreo  inicio_muestreo  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  GPIO.c  GPIO.h  Kconfig.projbuild  acelerometroI2C.c  acelerometroI2C.h  circularOrderedArray.c  circularOrderedArray.h  configuraciones.h  interruption.h  linearfit.c  linearfit.h  main-sync.c  main.c  main.h  microtime.c  microtime.h  mqtt.c  mqtt.h  mqtt_analisis.c  mqtt_analisis.h  sd_card.c  sic.c  sic.h  tareas.c  tic-toc.c  tic-toc.h  timer_muestreo.c  timer_muestreo.h  timer_muestreo_OLD.c  wifi.c
main/TEMP/: acelerometroI2C.c  acelerometroI2C.h  file_server.c  file_server.h  interruption.c  main.c  mensajes_mqtt.c  mensajes_mqtt.h  mqtt.c  mqtt.h  timer_muestreo.c  timer_muestreo.h
main/TEMP/tictoc/: daemon.c  halfSampleMode.h  microtime.h  sic.h
main/funciones_nodo/: GPIO.h  file_server.c  ftp.c  mqtt.c  mqtt.h  sd_card.c  sd_card.h  tareas.c  timer_muestreo.c  timer_muestreo.h  varias.c  varias.h
main/tictoc/: circularOrderedArray.c  circularOrderedArray.h  client.c  daemon.c  daemon.h  halfSampleMode.c  linearfit.c  linearfit.h  microtime.c  sic.c  sic.h
